Dev Org/src/objects/Template_Page__c.object
<CustomObject>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Template_Pages</relationshipLabel>
        <relationshipName>Template_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>Template_Pages</relationshipLabel>
        <relationshipName>Template_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root</label>
        <referenceTo>Template_Page__c</referenceTo>
        <relationshipLabel>Template_Pages</relationshipLabel>
        <relationshipName>Template_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Template_Pages</relationshipLabel>
        <relationshipName>Template_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template-Page</label>
    <nameField>
        <label>Template-Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template_Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>